@@ -315,6 +315,19 @@ name|org
 operator|.
 name|apache
 operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|BytesRefHash
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|solr
 operator|.
 name|common
@@ -1157,6 +1170,62 @@ parameter_list|)
 block|{
 throw|throw
 name|e
+throw|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|iae
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|BAD_REQUEST
+argument_list|,
+name|String
+operator|.
+name|format
+argument_list|(
+name|Locale
+operator|.
+name|ROOT
+argument_list|,
+literal|"Exception writing document id %s to the index; possible analysis error: "
+operator|+
+name|iae
+operator|.
+name|getMessage
+argument_list|()
+operator|+
+operator|(
+name|iae
+operator|.
+name|getCause
+argument_list|()
+operator|instanceof
+name|BytesRefHash
+operator|.
+name|MaxBytesLengthExceededException
+condition|?
+literal|". Perhaps the document has an indexed string field (solr.StrField) which is too large"
+else|:
+literal|""
+operator|)
+argument_list|,
+name|cmd
+operator|.
+name|getPrintableId
+argument_list|()
+argument_list|)
+argument_list|,
+name|iae
+argument_list|)
 throw|;
 block|}
 catch|catch
